k8s/homelab/core/monitoring/manifests/ntfyReceiver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-options: ""
    argocd.argoproj.io/sync-wave: "5"
  labels:
    app.kubernetes.io/component: alertmanager-webhook-receiver
    app.kubernetes.io/name: ntfy-receiver
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.4.0
  name: ntfy-receiver
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: alertmanager-webhook-receiver
      app.kubernetes.io/name: ntfy-receiver
      app.kubernetes.io/part-of: kube-prometheus
  template:
    metadata:
      labels:
        app.kubernetes.io/component: alertmanager-webhook-receiver
        app.kubernetes.io/name: ntfy-receiver
        app.kubernetes.io/part-of: kube-prometheus
        app.kubernetes.io/version: 0.4.0
    spec:
      containers:
        - image: xenrox/ntfy-alertmanager:0.4.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            tcpSocket:
              port: http
          name: ntfy-receiver
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: http
          resources:
            limits:
              memory: 50Mi
            requests:
              cpu: 2m
              memory: 20Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /etc/ntfy-alertmanager
              name: config
              readOnly: true
            - mountPath: /etc/ntfy-alertmanager/secrets
              name: auth
              readOnly: true
      restartPolicy: Always
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
        - configMap:
            name: ntfy-receiver-config
          name: config
        - name: auth
          secret:
            secretName: ntfy-receiver-auth
